--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<html>
-<head>A little nothing goes a long way</head>
-<body>
-Insert status here
-</body>
-</html>
+As always, in over head. Neither proud nor ashamed.
+<br>
+<a href="https://hipwar.github.io/linkdump.html>Link dump</href>
