--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-As always, in over head. Neither proud nor ashamed.
+##as always, in over head
+###Proud and Ashamed
 <br>
 <a href="https://hipwar.github.io/linkdump.html>Link dump</href>
 <br>
