--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ##as always, in over head
 ###Proud and Ashamed
-<br>
-<a href="https://hipwar.github.io/linkdump.html>Link dump</href>
-<br>
+
+[link dump](linkdump.html)
+
+In the complexity of the world, find solace in the 
+> happiness of pursuit
+
